--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 body {
   margin: 0;
   padding: 0;
@@ -11,4 +12,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.warp{
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 }
